[gd_scene load_steps=30 format=3 uid="uid://5uiwv0rqds8n"]

[ext_resource type="Script" uid="uid://1fjnthfvcgv3" path="res://src/Characters/NPC/Ennemies/ThiefKid/ThiefKid.gd" id="1_80j50"]
[ext_resource type="Shader" uid="uid://dis4rpkeisnth" path="res://assets/shader/recolor.gdshader" id="2_rhrsc"]
[ext_resource type="Resource" uid="uid://b1sqjl338o38w" path="res://src/Characters/NPC/PaletteSamplerDocks.tres" id="2_wlwla"]
[ext_resource type="Texture2D" uid="uid://dl341tiikvywf" path="res://assets/art/characters/Pedestrian_7.png" id="3_2oygl"]
[ext_resource type="Script" uid="uid://b4k5l1qt3nyhh" path="res://src/Characters/StateSystem/MultiStateMachine.gd" id="4_36x6c"]
[ext_resource type="Texture2D" uid="uid://yhnhpyvb7d70" path="res://assets/art/effects/exclamation_bubble.png" id="4_odo55"]
[ext_resource type="Script" uid="uid://w1ymahbrg3ey" path="res://src/Characters/NPC/Ennemies/ThiefKid/Logic.gd" id="5_aapnc"]
[ext_resource type="Texture2D" uid="uid://bdkxpfm14ft1r" path="res://assets/art/effects/interrogation_bubble.png" id="5_krst4"]
[ext_resource type="Script" uid="uid://cb5lnao1slxeg" path="res://src/Characters/NPC/Ennemies/ThiefKid/Idle.gd" id="6_gxwnp"]
[ext_resource type="Script" uid="uid://03omjk1utll" path="res://src/Items/Balls/BallHolder.gd" id="7_qdd23"]
[ext_resource type="Script" uid="uid://d2nkm7jyi3uge" path="res://src/Characters/NPC/Ennemies/ThiefKid/FollowingBall.gd" id="10_nyag0"]
[ext_resource type="Script" uid="uid://drt2yb6jqsfo1" path="res://src/Characters/NPC/Ennemies/ThiefKid/Passing.gd" id="10_qav1v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ccph8"]
radius = 8.0
height = 56.0

[sub_resource type="Gradient" id="Gradient_l1ux5"]
offsets = PackedFloat32Array(0, 0.344633, 1)
colors = PackedColorArray(0.266131, 0.260188, 0.27296, 1, 0.31171, 0.389646, 0.424332, 1, 0.755498, 0.726151, 0.670069, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xya6b"]
gradient = SubResource("Gradient_l1ux5")

[sub_resource type="Gradient" id="Gradient_orqy7"]
colors = PackedColorArray(0.0980392, 0.0588235, 0, 1, 0.975107, 0.624491, 6.08373e-05, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3xa4u"]
gradient = SubResource("Gradient_orqy7")

[sub_resource type="Gradient" id="Gradient_a8ik4"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.713726, 1, 0.886275, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8rk3a"]
gradient = SubResource("Gradient_a8ik4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ul68"]
shader = ExtResource("2_rhrsc")
shader_parameter/grad_0 = SubResource("GradientTexture1D_xya6b")
shader_parameter/grad_1 = SubResource("GradientTexture1D_3xa4u")
shader_parameter/grad_2 = SubResource("GradientTexture1D_8rk3a")

[sub_resource type="Animation" id="Animation_tsrlh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../SpriteExclamation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../SpriteExclamation:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../SpriteExclamation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, -32)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../SpriteExclamation:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_odo55")]
}

[sub_resource type="Animation" id="Animation_sbffs"]
resource_name = "exclamation"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../SpriteExclamation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../SpriteExclamation:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 1.4, 1.6),
"transitions": PackedFloat32Array(0.5, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../SpriteExclamation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.7, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(24, -36), Vector2(24, -34), Vector2(24, -36), Vector2(24, -34)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../SpriteExclamation:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_odo55")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../StateMachine/Logic:can_go")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_qmipg"]
resource_name = "idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_edu05"]
resource_name = "interrogation"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../SpriteExclamation:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../SpriteExclamation:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 1.4, 1.6),
"transitions": PackedFloat32Array(0.5, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../SpriteExclamation:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.7, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(24, -36), Vector2(24, -34), Vector2(24, -36), Vector2(24, -34)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../SpriteExclamation:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_krst4")]
}

[sub_resource type="Animation" id="Animation_o4y5e"]
resource_name = "passing"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../StateMachine/Passing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"passing"
}]
}

[sub_resource type="Animation" id="Animation_gpr2a"]
resource_name = "walk"
length = 1.12
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56, 0.63, 0.7, 0.77, 0.84, 0.91, 0.98, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../StateMachine/Logic:can_go")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fq6sd"]
_data = {
&"RESET": SubResource("Animation_tsrlh"),
&"exclamation": SubResource("Animation_sbffs"),
&"idle": SubResource("Animation_qmipg"),
&"interrogation": SubResource("Animation_edu05"),
&"passing": SubResource("Animation_o4y5e"),
&"walk": SubResource("Animation_gpr2a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qs8le"]
size = Vector2(256, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xdo6"]
size = Vector2(32, 56)

[node name="ThiefKid" type="CharacterBody2D"]
collision_mask = 514
script = ExtResource("1_80j50")
palette_scheme_sampler = ExtResource("2_wlwla")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_ccph8")

[node name="Flipper" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Flipper"]
material = SubResource("ShaderMaterial_0ul68")
position = Vector2(0, -1)
texture = ExtResource("3_2oygl")
hframes = 16
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flipper/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_fq6sd")
}

[node name="BallFetcher" type="Area2D" parent="Flipper"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="Flipper/BallFetcher"]
position = Vector2(112, 4)
shape = SubResource("RectangleShape2D_qs8le")

[node name="BallHolder" type="Node2D" parent="Flipper"]
script = ExtResource("7_qdd23")

[node name="BallPicker" type="Area2D" parent="Flipper"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="Flipper/BallPicker"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_8xdo6")
debug_color = Color(0.729412, 1, 0.733333, 0.419608)

[node name="BallPositioner" type="RemoteTransform2D" parent="Flipper"]
position = Vector2(-8, 8)
update_rotation = false
update_scale = false

[node name="SpriteExclamation" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, -32)
texture = ExtResource("4_odo55")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("status_logic", "init_states")]
script = ExtResource("4_36x6c")
status_logic = NodePath("Logic")
init_states = [NodePath("Idle")]

[node name="Logic" type="Node" parent="StateMachine" node_paths=PackedStringArray("fetcher", "picker", "positioner", "flipper", "holder")]
script = ExtResource("5_aapnc")
fetcher = NodePath("../../Flipper/BallFetcher")
picker = NodePath("../../Flipper/BallPicker")
positioner = NodePath("../../Flipper/BallPositioner")
flipper = NodePath("../../Flipper")
holder = NodePath("../../Flipper/BallHolder")
can_go = true

[node name="ReleasedBallTimer" type="Timer" parent="StateMachine/Logic"]

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "logic", "animation_player", "following_state", "passing_state")]
script = ExtResource("6_gxwnp")
character_body = NodePath("../..")
logic = NodePath("../Logic")
animation_player = NodePath("../../Flipper/Sprite2D/AnimationPlayer")
following_state = NodePath("../FollowingBall")
passing_state = NodePath("../Passing")

[node name="FollowingBall" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "logic", "animation_player", "idle_state", "passing_state")]
script = ExtResource("10_nyag0")
character_body = NodePath("../..")
logic = NodePath("../Logic")
animation_player = NodePath("../../Flipper/Sprite2D/AnimationPlayer")
idle_state = NodePath("../Idle")
passing_state = NodePath("../Passing")

[node name="Passing" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "logic", "animation_player", "idle_state")]
script = ExtResource("10_qav1v")
character_body = NodePath("../..")
logic = NodePath("../Logic")
animation_player = NodePath("../../Flipper/Sprite2D/AnimationPlayer")
idle_state = NodePath("../Idle")

[connection signal="body_entered" from="Flipper/BallFetcher" to="StateMachine/Logic" method="_on_ball_fetcher_body_entered"]
[connection signal="body_exited" from="Flipper/BallFetcher" to="StateMachine/Logic" method="_on_ball_fetcher_body_exited"]
[connection signal="body_entered" from="Flipper/BallPicker" to="StateMachine/Logic" method="_on_ball_picker_body_entered"]
[connection signal="timeout" from="StateMachine/Logic/ReleasedBallTimer" to="StateMachine/Logic" method="_on_released_ball_timer_timeout"]
